<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profilpage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    android:weightSum="3"
    tools:context=".ui.profilNeigghbourPage.Profil_neighbour">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.30">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/Avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
        <ImageButton
            android:id="@+id/BackMainActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            tools:src="@drawable/ic_keyboard_backspace_24px"
            android:clickable="true"
            android:background="@android:color/transparent"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="normal"
            android:typeface="normal"/>


    </android.support.v7.widget.CardView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/AddToFavorit"
        app:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="-29dp"
        android:layout_marginTop="-29dp"
        android:layout_marginRight="20dp"
        tools:src="@drawable/ic_star_border_white_24dp"
        />

    <android.support.v7.widget.CardView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="4dp"
        android:backgroundTint="@android:color/darker_gray">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="39dp"
    android:background="@android:color/white">
        <TextView
            android:id="@+id/Name2"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:layout_marginTop="12dp"
            android:layout_marginStart="15dp"
            android:typeface="normal"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            tools:src="@drawable/ic_room_24px" />

        <TextView
            android:id="@+id/locationID"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/locationIcon"
            android:layout_marginLeft="15dp"
            />

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationIcon"
            android:layout_marginLeft="15dp"
            tools:src="@drawable/ic_call_24px"
            />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/locationID"
            android:layout_toRightOf="@+id/phoneIcon"
            android:layout_marginLeft="15dp"
            />
        <ImageView
            android:id="@+id/SocialIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneIcon"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            tools:src="@drawable/ic_public_24px" />
        <TextView
            android:id="@+id/SocialMail"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/phoneNumber"
            android:layout_toRightOf="@+id/SocialIcon"
            android:layout_marginLeft="15dp"
             />
    </RelativeLayout>

</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.70"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@android:color/darker_gray">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="39dp"
    android:background="@android:color/white">
        <TextView
            android:id="@+id/AboutMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:layout_marginTop="12dp"
            android:layout_marginStart="15dp"
            android:typeface="normal"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:title="@string/title_about_me" />
</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:background="@android:color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="10sp"/>

</RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>