<resources>
<string name="app_name">Entrevoisins</string>
<string name="tab_neighbour_title" translatable="false">My neighbours</string>
<string name="tab_favorites_title" translatable="false">Favorites</string>
<string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
<string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
...
